deploy/k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: micro-docker
  name: micro-docker
  namespace: curso
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-docker
  template:
    metadata:
      labels:
        app: micro-docker
    spec:
      containers:
      - name: micro1   
        image: mauron/micro-docker:1.3
        ports:
        - containerPort: 9090
          protocol: TCP
        resources:
            requests:
              memory: "200Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "300m"  
          
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: micro-docker
  name: micro-docker
  namespace: curso
spec:
  selector:
    app: micro-docker
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 9090
